--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Common Tag -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Undangan Ghina Dan Akram</title>
+    <title>Wedding Invitation Ghina & Akram</title>
 
     <!-- SEO Tag -->
     <meta name="author" content="dewanakl">
@@ -113,7 +113,7 @@
         <!-- Home -->
         <section id="home" class="position-relative overflow-hidden p-0 m-0">
 
-            <img src="./assets/images/bg.png" alt="bg" class="bg-cover-home">
+            <img src="./assets/images/baralek.png" alt="bg" class="bg-cover-home">
 
             <div class="position-relative text-center pt-4 pb-0 px-0 m-0">
                 <h1 class="font-esthetic my-4 fw-medium" style="font-size: 2.5rem;">Undangan Pernikahan</h1>
@@ -178,11 +178,11 @@
 
                     <div data-aos="fade-right" data-aos-duration="2000">
                         <div class="img-crop border border-3 border-light shadow my-4 mx-auto">
-                            <img src="./assets/images/cowo.png" alt="cowo" onclick="util.modal(this)">
+                            <img src="./assets/images/cewe.png" alt="cowo" onclick="util.modal(this)">
                         </div>
-                        <h2 class="font-esthetic" style="font-size: 3rem;">Wahyu Siapa</h2>
-                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putra</p>
-                        <p class="mb-0">Bapak ... &amp; Ibu ...</p>
+                        <h2 class="font-esthetic" style="font-size: 3rem;">Lathifah Ghina Hamdany</h2>
+                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putri</p>
+                        <p class="mb-0">Bapak Ir. Hendri Dunal &amp; Ibu Afrima Santi</p>
                     </div>
 
                     <!-- Love animation -->
@@ -209,9 +209,9 @@
                         <div class="img-crop border border-3 border-light shadow my-4 mx-auto">
                             <img src="./assets/images/cewe.png" alt="cewe" onclick="util.modal(this)">
                         </div>
-                        <h2 class="font-esthetic" style="font-size: 3rem;">Riski Siapa</h2>
-                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putri</p>
-                        <p class="mb-0">Bapak ... &amp; Ibu ...</p>
+                        <h2 class="font-esthetic" style="font-size: 3rem;">Ahmad Akram Ma'mur</h2>
+                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putra</p>
+                        <p class="mb-0">Bapak Ir. H. Ma'mur H Syam, M.Sc (Alm) &amp; Ibu Dra. H. Nursiah Rauf, M.Si</p>
                     </div>
                 </div>
 
@@ -273,7 +273,7 @@
 
                     <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
                         <!-- Ganti waktunya pada data-waktu (sesuai format tersebut) -->
-                        <div class="row justify-content-center" data-time="2024-01-01 00:00:00" id="count-down">
+                        <div class="row justify-content-center" data-time="2024-11-10 10:00:00" id="count-down">
                             <div class="col-3 p-1">
                                 <h2 class="d-inline m-0 p-0" id="day">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
                             </div>
@@ -303,18 +303,20 @@
                     <div class="overflow-x-hidden">
                         <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
                             <h2 class="font-esthetic" style="font-size: 2rem;">Akad</h2>
+                            <p>8 November 2024</p>
                             <p>Pukul 10.00 WIB - Selesai</p>
                         </div>
 
                         <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                             <h2 class="font-esthetic" style="font-size: 2rem;">Resepsi</h2>
+                            <p>10 November 2024</p>
                             <p>Pukul 13.00 WIB - Selesai</p>
                         </div>
                     </div>
 
                     <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                        <a href="https://goo.gl/maps/ALZR6FJZU3kxVwN86" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
-                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">RT 10 RW 02, Desa Pajerukan, Kec. Kalibagor, Kab. Banyumas, Jawa Tengah 53191</p>
+                        <a href="https://maps.app.goo.gl/wc8x96wokfSdz7CUA" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
+                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">Kinari</p>
                     </div>
                 </div>
             </div>
@@ -406,44 +408,6 @@
         </svg>
 
         <!-- Love Gift -->
-        <div class="container">
-            <div class="pb-2">
-
-                <div class="text-center">
-
-                    <h2 class="font-esthetic mt-0 mb-3" style="font-size: 3rem;">Love Gift</h2>
-
-                    <p class="mb-3" style="font-size: 0.9rem;">
-                        Tanpa mengurangi rasa hormat, bagi Anda yang ingin memberikan tanda kasih untuk kami, dapat melalui:
-                    </p>
-
-                    <div class="overflow-x-hidden">
-                        <div class="row row-cols-2">
-
-                            <div class="col card-body border rounded-4 shadow p-3 mx-4 mt-2 mb-4" data-aos="fade-down" data-aos-duration="1500">
-                                <img src="https://upload.wikimedia.org/wikipedia/id/thumb/5/55/BNI_logo.svg/640px-BNI_logo.svg.png" class="img-fluid w-50 rounded" alt="bni">
-
-                                <p class="card-text mt-3 mb-0" style="font-size: 0.9rem;">No. Rekening 123456789</p>
-                                <p class="card-text" style="font-size: 0.9rem;">a.n Lorem ipsum dolor</p>
-
-                                <!-- Ubah juga data-copy sesuai dengan no rekening -->
-                                <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789" onclick="util.copy(this, 'Tersalin')">Salin No. Rekening</button>
-                            </div>
-
-                            <div class="col card-body border rounded-4 shadow p-3 mx-4 mt-2 mb-4" data-aos="fade-down" data-aos-duration="1500">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/BANK_BRI_logo.svg/640px-BANK_BRI_logo.svg.png" class="img-fluid w-50 rounded" alt="bri">
-
-                                <p class="card-text mt-3 mb-0" style="font-size: 0.9rem;">No. Rekening 123456789</p>
-                                <p class="card-text" style="font-size: 0.9rem;">a.n Lorem ipsum dolor</p>
-
-                                <!-- Ubah juga data-copy sesuai dengan no rekening -->
-                                <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789" onclick="util.copy(this, 'Tersalin')">Salin No. Rekening</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <!-- Comment -->
         <section class="m-0 px-0 pb-0 pt-2" id="comment">
@@ -554,10 +518,10 @@
                 <h2 class="font-esthetic mb-4" style="font-size: 2.5rem;">The Wedding Of</h2>
 
                 <div class="img-crop border border-3 border-light shadow mb-4 mx-auto">
-                    <img src="./assets/images/bg.png" alt="background">
+                    <img src="./assets/images/baralek.png" alt="background">
                 </div>
 
-                <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Wahyu &amp; Riski</h2>
+                <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Ghina &amp; Akram</h2>
                 <div id="guest-name" data-message="Kepada Yth Bapak/Ibu/Saudara/i"></div>
 
                 <button type="button" class="btn btn-light shadow rounded-4 mt-4" onclick="guest.open(this)">
