--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <!-- Home -->
         <section id="home" class="position-relative overflow-hidden p-0 m-0">
 
-            <section id="home" class="p-0 m-0" style="background-image: url('./assets/images/latar2.jpg'); background-size: cover; background-position: center;">
-            <div class="text-center pt-4 pb-0 px-0 m-0 bg-cover-black">
+            <img src="./assets/images/latar.jpg" alt="bg" class="bg-cover-home">
+              <div class="text-center pt-4 pb-0 px-0 m-0 bg-cover-black">
 
             <div class="position-relative text-center pt-4 pb-0 px-0 m-0">
                 <h1 class="font-esthetic my-4 fw-medium" style="font-size: 2.5rem;">Undangan Pernikahan</h1>
