--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <meta name="language" content="id">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-image-preview:large">
-    <meta name="title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta name="description" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta name="title" content="Website Undangan Pernikahan Ghina & akram">
+    <meta name="description" content="Website Undangan Pernikahan Ghina & akram">
     <meta name="keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta property="og:description" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta property="og:title" content="Website Undangan Pernikahan Ghina & akram">
+    <meta property="og:description" content="Website Undangan Pernikahan Ghina & akram">
     <meta property="og:keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
     <meta property="og:image" content="https://ulems.my.id/assets/images/bg.png">
     <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.png">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:alt" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta property="og:image:alt" content="Website Undangan Pernikahan Ghina & akram">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <meta property="og:url" content="https://ulems.my.id">
-    <meta property="og:site_name" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta property="og:site_name" content="Website Undangan Pernikahan Ghina & akram">
 
     <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta name="apple-mobile-web-app-title" content="Website Undangan Pernikahan Ghina & akram">
     <meta name="theme-color" content="#111111">
     <meta name="color-scheme" content="dark">
     <link rel="canonical" href="https://ulems.my.id/">
@@ -111,8 +111,9 @@
     <main class="bg-dark text-light" data-bs-spy="scroll" data-bs-target="#navbar-menu" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
         <!-- Home -->
-        <section id="home" class="p-0 m-0" style="background-image: url('./assets/images/latar.jpg'); background-size: cover; background-position: center;">
-            <div class="text-center pt-4 pb-0 px-0 m-0 bg-cover-black">
+        <section id="home" class="position-relative overflow-hidden p-0 m-0">
+
+            <img src="./assets/images/latar.jpg" alt="bg" class="bg-cover-home">
 
             <div class="position-relative text-center pt-4 pb-0 px-0 m-0">
                 <h1 class="font-esthetic my-4 fw-medium" style="font-size: 2.5rem;">Undangan Pernikahan</h1>
