--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta property="og:title" content="Website Undangan Pernikahan Ghina & akram">
     <meta property="og:description" content="Website Undangan Pernikahan Ghina & akram">
     <meta property="og:keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:image" content="https://ulems.my.id/assets/images/bg.png">
-    <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.png">
+    <meta property="og:image" content="https://drive.google.com/file/d/1LdAE1agUwo7L4TkNvJEtPsWY-v2CoIRc/view?usp=sharing">
+    <meta property="og:image:secure_url" content="https://drive.google.com/file/d/1LdAE1agUwo7L4TkNvJEtPsWY-v2CoIRc/view?usp=sharing">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:alt" content="Website Undangan Pernikahan Ghina & akram">
     <meta property="og:type" content="website">
