--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         </div>
                         <h2 class="font-esthetic" style="font-size: 3rem;">Ahmad Akram Ma'mur</h2>
                         <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putra</p>
-                        <p class="mb-0">Bapak Ir. H. Ma'mur H Syam, M.Sc (Alm) &amp; Ibu Dra. H. Nursiah Rauf, M.Si</p>
+                        <p class="mb-0">Bapak Ir. H. Ma'mur H Syam, M.Sc (Alm) &amp; Ibu Dra. Hj. Nursiah Rauf, M.Si</p>
                     </div>
                 </div>
 
