--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
 
                 <h2 class="font-esthetic my-4" style="font-size: 3rem;">Ghina &amp; Akram</h2>
-                <p class="mb-0" style="font-size: 1.5rem;">Jum'at, 08 November 2024</p>
+                <p class="mb-0" style="font-size: 1.5rem;">Ahad, 10 November 2024</p>
 
                 <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20%20of%20Rifqi%20and%20Freya&details=The%20%20of%20Rifqi%20and%20Freya%20%7C%2020%20Desember%202023%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20230315T100000/20230315T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86">
                     <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
@@ -211,7 +211,7 @@
                         </div>
                         <h2 class="font-esthetic" style="font-size: 3rem;">Ahmad Akram Ma'mur</h2>
                         <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putra</p>
-                        <p class="mb-0">Bapak Ir. Ma'mur H Syam, M.Sc (Alm) &amp; Ibu Dra. Nursiah Rauf, M.Si</p>
+                        <p class="mb-0">Bapak Ir. Ma'mur H Syam, M.Sc (Alm) &amp; Ibu Dra. Nursiah Rauf, M.Si (Alm)</p>
                     </div>
                 </div>
 
